# claude-rag

./: .gitignore  README.md  pyproject.toml
scripts/: register_mcp.py
src/claude_rag/: __init__.py  config.py  indexer.py  jsonl.py  server.py  store.py
