[project]
name = "claude-rag"
version = "0.1.0"
description = "Local RAG over Claude Code conversation history, exposed as an MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "chromadb>=0.5.0",
    "fastembed>=0.4.0",
]

[project.scripts]
claude-rag-index = "claude_rag.indexer:main"
claude-rag-server = "claude_rag.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_rag"]
